# htmxer

./: Cargo.toml
askmama/: Cargo.toml  README.md  package.json  pnpm-lock.yaml
askmama/assets/: main.css
askmama/migrations/: 20240509235310_create_todo_table.sql
askmama/src/: main.rs  templates.rs  todo.rs
askmama/templates/: base.html  create_todo.html  home.html  todo_not_found.html  todo_page.html  todo_row.html  todo_rows.html  todo_table.html
marauder/: .env  Cargo.toml  package.json  pnpm-lock.yaml  tailwind.config.cjs
marauder/assets/: main.css
marauder/src/: config.rs  handlers.rs  templates.rs
minimouse/: .env  Cargo.toml  init_db.sh  package.json  pnpm-lock.yaml
minimouse/src/: config.rs  handlers.rs  main.rs  templates.rs
templ-of-ikov/: .air.toml  .env  .gitignore  20240713020522_create_todo_table.sql  Makefile  README.md  go.mod  go.sum  package.json  pnpm-lock.yaml  tailwind.config.js
templ-of-ikov/assets/css/: main.css
templ-of-ikov/cmd/: main.go
templ-of-ikov/css/: main.css
templ-of-ikov/db/: db.go
templ-of-ikov/handler/: home.go  todo.go  util.go
templ-of-ikov/model/: todo.go
templ-of-ikov/repository/: todo.go
templ-of-ikov/scripts/: migrate.sh
templ-of-ikov/view/: utils.go
templ-of-ikov/view/component/: input.templ  input_templ.go
templ-of-ikov/view/home/: home.templ  home_templ.go
templ-of-ikov/view/layout/: base.templ  base_templ.go  content_wrapper.templ
templ-of-ikov/view/todo/: show.templ  show_templ.go
